; ModuleID = '/home/carl/AnghaBench/kphp-kdb/seqmap/extr_seqmap-data.c_change_node_type.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/seqmap/extr_seqmap-data.c_change_node_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.item = type { i32, i32, i32 }

@item_tree = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @change_node_type(%struct.item* %0, i32 %1) #0 {
  %3 = alloca %struct.item*, align 8
  %4 = alloca i32, align 4
  store %struct.item* %0, %struct.item** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @item_tree, align 4
  %6 = load %struct.item*, %struct.item** %3, align 8
  %7 = getelementptr inbounds %struct.item, %struct.item* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.item*, %struct.item** %3, align 8
  %10 = getelementptr inbounds %struct.item, %struct.item* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @tree_delete(i32 %5, i32 %8, i32 %11)
  store i32 %12, i32* @item_tree, align 4
  %13 = load %struct.item*, %struct.item** %3, align 8
  %14 = getelementptr inbounds %struct.item, %struct.item* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %15, -8
  %17 = load i32, i32* %4, align 4
  %18 = or i32 %16, %17
  %19 = load %struct.item*, %struct.item** %3, align 8
  %20 = getelementptr inbounds %struct.item, %struct.item* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* @item_tree, align 4
  %22 = load %struct.item*, %struct.item** %3, align 8
  %23 = call i32 @tree_insert(i32 %21, %struct.item* %22)
  store i32 %23, i32* @item_tree, align 4
  ret void
}

declare dso_local i32 @tree_delete(i32, i32, i32) #1

declare dso_local i32 @tree_insert(i32, %struct.item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
